<resources>
    <string name="app_name">PlayersApp</string>
    <string name="Programmer">Calvin LaClair</string>
    <string name="player1">Player One</string>
    <string name="player2">Player Two</string>
    <string name="start">Start</string>
    <string name="score">Scoreboard</string>
    <string name="addplayer">Add a New Player</string>
    <string name="gameState" />
    <string name="emuPlayer1">Player 1:</string>
    <string name="emuPlayer2">Player 2:</string>
    <string name="instruction">Type the name of the new player in here.</string>
    <string name="tie">It\'s a tie! No one wins!</string>
    <string name="player1Win">Player 1 Wins!</string>
    <string name="player2Win">Player 2 Wins!</string>
    <string name="back">Back</string>
</resources>
